# crowsetta

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATION.cff  LICENSE  Makefile  README.md  noxfile.py  paper.bib  paper.md  pyproject.toml  readthedocs.yml  setup.py
.github/: contributing.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lint.yml
.make/: venv.Makefile
doc/: .readthedocs.yml  CHANGELOG.md  background.md  background.rst  conf.py  example.rst  howto-user-format.md  howto-user-format.rst  howto.md  howto.rst  index.md  index.rst  intro.rst  nitpick-ignore.txt  tutorial.md  tutorial.rst
doc/api/: core.md  formats.md  index.md  interface.md
doc/data/r6paq/: b11_concat_dtw.TextGrid
doc/development/: commit-abbreviations.rst  contributors.md  index.md
doc/formats/: index.md
doc/formats/bbox/: raven.md
doc/formats/seq/: aud-seq.md  aud-txt.md  birdsongrec.md  generic-seq.md  notmat.md  simple-seq.md  textgrid.md  timit.md
doc/howto/: batlab.py  convert-generic-seq.md  convert-simple-seq.md  howto-user-format.md  munging-annotations-textgrid.md  remove-silent-labels-textgrid.md  work-with-unlabeled-segmentations.md
doc/howto-user-format/: batlab.py  batlab2seq.py
doc/notebooks/: Makefile  batlab2seq.py  howto-user-format.ipynb  parsebat.py  tutorial.ipynb
doc/scripts/: raven-chronister-et-al-2021.md  textgrid-BF-dataset.md
doc/scripts/annot/: Recording_1_Segment_07.Table.1.selections.txt  b06_concat_dtw.TextGrid
notebooks/: batlab2seq.py  howto-user-format.ipynb  tutorial.ipynb
src/conbirt/: __init__.py  annotation.py  conbirt.py  csv.py  koumura.py  notmat.py  sequence.py  tuples.py
src/crowsetta/: __about__.py  __init__.py  annotation.py  bbox.py  birdsongrec.py  classes.py  config.ini  config.json  crowsetta.py  csv.py  data.py  formats.py  generic.py  koumura.py  meta.py  notmat.py  phn.py  segment.py  sequence.py  simple.py  stack.py  textgrid.py  transcriber.py  typing.py  validation.py  yarden.py
src/crowsetta/data/: __init__.py  data.py
src/crowsetta/examples/: 405_marron1_June_14_2016_69640887.audacity-description.txt  AVO-maea-basic.TextGrid-description.txt  Annotation.xml-description.txt  GO_24860x23748_ltr2_pup3_ch4_4800_m_337_295_fr1_p9_2021-10-02_12-35-01-description.txt  Recording_1_Segment_02.Table.1.selections-description.txt  __init__.py  _examples.py  bird1.txt  bl26lb16_190412_0721.20144_annotations-description.txt  bl26lb16_190412_0721.20144_annotations.csv  example-metadata.json  gy6or6_baseline_230312_0808.138.cbin.not-description.txt  sa1-description.txt  spinetail-description.txt
src/crowsetta/formats/: __init__.py
src/crowsetta/interface/: __init__.py  base.py
tests/: conftest.py  test_annotation.py  test_bbox.py  test_birdsongrec.py  test_classes.py  test_conbirt.py  test_crowsetta.py  test_csv.py  test_data.py  test_example.py  test_formats.py  test_generic.py  test_koumura.py  test_notmat.py  test_phn.py  test_segment.py  test_sequence.py  test_simple.py  test_textgrid.py  test_transcriber.py  test_validation.py  test_yarden.py
tests/data_for_tests/audio_WAV_annot_PHN/: SI943.PHN  SI943.TXT
tests/data_for_tests/audio_wav_annot_phn/: README.md
tests/data_for_tests/audio_wav_nist_annot_phn/: SA1.TXT  SA1.WRD  SA2.PHN  SA2.WRD  SI2203.WRD
tests/data_for_tests/csv/: birdsongrec_Bird0_Annotation.csv  example_annotation_with_onset_inds_offset_inds_None.csv  example_user_annotation.csv  gy6or6_032312.csv  invalid_fields_in_header.csv  missing_fields_in_header.csv  no_onset_or_offset_column.csv  notmat_gy6or6_032312.csv  onset_ind_column_but_no_offset_ind_column.csv  onset_s_column_but_no_offset_s_column.csv  onset_sample_column_but_no_offset_sample_column.csv  timit-dr1-fvmh0-phn.csv  unrecognized_fields_in_header.csv
tests/data_for_tests/example_custom_format/: bird1_annotation.mat  example.py
tests/data_for_tests/simple-csv/: BBY15-4___20150907_211645.csv  BB_BBY15-5___20151002_192753 - Copy.csv  BB_bs1_ 2011-07-10 21_49_51 025.csv  BB_bs1_ 2011-07-10 22_33_03 040.csv  BLE-PIP_SGP16-1___20160521_212321.csv  DB_1-WWS16-2___20160822_203501.csv  NAT_BBY15-3___20150803_214851.csv  NAT_BBY16-2e__20160519_215057.csv  NL_STE15-1___20150819_205942.csv  NN_CHC15-1___20150407_200017.csv  Nat_BBY15-3___20150803_215652.csv  PN_BBY16-6e__20160927_191409.csv  PN_BBY16-6t__20160927_191328.csv  README.md  SER_PAN16-3___20160710_224150.csv  STB17-1__20170201_173841.csv
tests/data_for_tests/textgrid/: README.md  textgrids.json
tests/data_for_tests/wav-textgrid/: 1212.TextGrid  1214.TextGrid  1216.TextGrid  1250.TextGrid
tests/fixtures/: __init__.py  audbbox.py  audseq.py  audtxt.py  bbox.py  birdsongrec.py  csv.py  data.py  example_user_format.py  koumura.py  notmat.py  phn.py  raven.py  segment.py  sequence.py  simple.py  textgrid.py  timit.py  yarden.py
tests/helpers/: __init__.py  keywords.py
tests/scripts/: remake_test_csv.py
tests/test_data/audio_WAV_annot_PHN/: README.md  SA2.TXT  SI1573.WRD  SI2203.TXT
tests/test_data/csv/: example_annotation_with_onsets_Hz_offsets_Hz_None.csv  gy6or6_032312.csv  missing_fields_in_header.csv
tests/test_data/wav-textgrid/: 1179.TextGrid  1215.TextGrid  1227.TextGrid  1235.TextGrid  1236.TextGrid  (+1 more)
tests/test_formats/: test_formats.py
tests/test_scripts/: example.py  remake_test_csv.py
(+583 files in other folders)
