[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "crowsetta"
description = "A tool to work with any format for annotating vocalizations"
authors = [
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
]
requires-python = ">=3.8"
dependencies = [
    "appdirs >=1.4.4",
    "attrs >=19.3.0",
    "evfuncs >=0.3.5",
    "birdsong-recognition-dataset >=0.3.2",
    "importlib-resources >=5.7.1",
    "numpy >=1.18.1",
    "pandas >= 1.3.5",
    "pandera >= 0.9.0",
    "scipy >=1.4.1",
    "SoundFile >=0.10.3",
]
version = "4.0.0"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
]

[project.optional-dependencies]
test = [
    "pytest >=6.2.1",
    "pytest-cov >=2.12.0"
]
doc = [
    "jupyterlab >=3.0.3",
    "jupytext >=1.13.8",
    "librosa >=0.9.1",
    "myst-nb >=0.15.0",
    "pyprojroot >=0.2.0",
    "seaborn >=0.11.2",
    "Sphinx >=3.4.3",
    "sphinx-autobuild >= 2021.3.14",
    "sphinx-book-theme >=0.3.2",
    "sphinx-copybutton >=0.4.0",
    "sphinx-design >=0.2.0",
    "sphinxext-opengraph  >=0.5.1",
    "sphinx-tabs >= 3.3.1",
]
dev = [
    'flit',
    'twine',
]

[project.urls]
Source = "https://github.com/NickleDave/crowsetta"
Documentation = "https://crowsetta.readthedocs.io"

[tool.flit.sdist]
exclude = [
    "tests/data_for_tests"
]
