[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "crowsetta"
description = "A Python tool to work with any format for annotating animal sounds and bioacoustics data"
authors = [
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
    "appdirs >=1.4.4",
    "attrs >=25.3.0",
    "numpy >=1.26.0",
    "pandas >= 2.1.0",
    "pandera >= 0.25.0",
    "scipy >=1.12.0",
    "SoundFile >=0.13.1",
]
version = "5.1.1"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
]

[project.optional-dependencies]
test = [
    "pytest >=6.2.1",
    "pytest-cov >=2.12.0",
    "pytest-xdist >=3.2.0",
]
doc = [
    "ipython != 8.7.0",
    "jupyterlab >=3.0.3",
    "jupytext >=1.13.8",
    "librosa >=0.9.1",
    "myst-nb >=0.15.0",
    "pyprojroot >=0.2.0",
    "seaborn >=0.11.2",
    "Sphinx >=3.4.3",
    "sphinx-autobuild >= 2021.3.14",
    "sphinx-book-theme >=0.3.2",
    "sphinx-copybutton >=0.4.0",
    "sphinx-design >=0.2.0",
    "sphinxext-opengraph  >=0.5.1",
    "sphinx-tabs >= 3.3.1",
]
dev = [
    'black >=23.1.0',
    'crowsetta[doc, test]',
    'flake8 >=6.0.0',
    'flit',
    'isort >=5.12.0',
    'pycln >=2.1.3',
    'twine',
]

[project.urls]
Source = "https://github.com/vocalpy/crowsetta"
Documentation = "https://crowsetta.readthedocs.io"

[tool.flit.sdist]
exclude = [
    "tests/data_for_tests"
]
